<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.demos.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/simulate_tantan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/dynamic_drawable"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/simulate_tantan" />

            <TextView
                android:id="@+id/angry_ball"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/dynamic_drawable"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/angry_ball" />

            <TextView
                android:id="@+id/alter_num"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/dynamic_drawable"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/alter_num" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/clock"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/dynamic_drawable"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/clock" />

            <TextView
                android:id="@+id/mosaic"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/dynamic_drawable"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/mosaic" />

            <TextView
                android:id="@+id/tear_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/dynamic_drawable"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/tear_image" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/custom_chart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/dynamic_drawable"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/custom_chart" />

            <TextView
                android:id="@+id/bigger"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/dynamic_drawable"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/bigger" />

            <TextView
                android:id="@+id/custom_fly_ball"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/dynamic_drawable"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/custom_fly_ball" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/coursera"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/dynamic_drawable"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/coursera" />

            <TextView
                android:id="@+id/remote_control"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/dynamic_drawable"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/remote_control" />

            <TextView
                android:id="@+id/flying_snow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/dynamic_drawable"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/flying_snow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/scratch_card"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/dynamic_drawable"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/scratch_card" />

            <TextView
                android:id="@+id/chat_head"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/dynamic_drawable"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/chat_head" />

            <TextView
                android:id="@+id/custom_progress_bar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/custom_progress_bar"
                android:background="@drawable/dynamic_drawable"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
