<?xml version="1.0" encoding="utf-8"?>
<com.demos.guidepage.customviews.ChildNotFollowView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/first"
    android:paddingLeft="100dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/first_view_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#002845" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/mwg" />

        <TextView
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/edit" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tantan"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:paddingLeft="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tantan"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:paddingLeft="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/anonymous"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:paddingLeft="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anonymous"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/setting"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:paddingLeft="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fresher_guide"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:paddingLeft="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fresher_guide"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/recommend"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:paddingLeft="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recommend"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </LinearLayout>

</com.demos.guidepage.customviews.ChildNotFollowView>